# ffxiv_materialui_accent

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  MaterialUI.sln  build.sh  repo.json
aetherment/: Cargo.toml  build.rs
aetherment/lib/: cimgui.lib
aetherment/plugin/: Aetherment.cs  Aetherment.csproj  Aetherment.json  Config.cs  FileDialog.cs  Penumbra.cs  TexFinder.cs  Texture.cs
aetherment/plugin/FFI/: Extern.cs  Str.cs  String.cs
aetherment/plugin/FFI/Types/: Array.cs  Result.cs  Str.cs  String.cs  Vec.cs
aetherment/plugin/Gui/Aeth/: Generics.cs  Options.cs  TabBar.cs  Texture.cs
aetherment/plugin/Gui/Window/: Texfinder.cs
aetherment/plugin/Gui/Window/Aetherment/: Aetherment.cs  ModBrowser.cs  ModDevelopment.cs  ModManager.cs  Settings.cs
aetherment/plugin/Gui/Window/Aetherment/Explorer/: Explorer.cs  Tree.cs
aetherment/plugin/Server/: Main.cs  ModStruct.cs
aetherment/plugin/Util/: Options.cs
aetherment/src/: config.rs  config_manager.rs  import.rs  lib.rs  log.rs  render_helper.rs  resource_loader.rs  server.rs
aetherment/src/api/: penumbra.rs
aetherment/src/apply/: download.rs  mod.rs  penumbra.rs
aetherment/src/creator/: meta.rs  modpack.rs  tags.rs  upload.rs
aetherment/src/creator/import/: penumbra.rs  v1.rs
aetherment/src/downloader/: download.rs  penumbra.rs
aetherment/src/explorer/: datas.rs  tools.rs  viewer.rs
aetherment/src/gui/: imguibindings.rs  mod_settings.rs
aetherment/src/gui/aeth/: divider.rs  drawlist.rs  file_dialog.rs  mod.rs  orderable_list.rs  scoped.rs  tabbar.rs  texture.rs
aetherment/src/gui/imgui/: bindings.rs  mod.rs
aetherment/src/gui/window/aetherment/: browser.rs  creator.rs  explorer.rs  manager.rs  mod.rs  settings.rs
aetherment/src/gui/window/aetherment/explorer/: tree.rs  viewer.rs
aetherment/src/moddev/: compress.rs  import.rs  index.rs  upload.rs
aetherment/src/modman/: backend.rs  composite.rs  meta.rs  mod.rs  settings.rs
aetherment/src/modman/backend/: penumbra_ipc.rs
aetherment/src/modman/composite/: tex.rs
aetherment/src/server/: mods.rs  structs.rs  user.rs
aetherment/src/view/: debug.rs  explorer.rs  main.rs  mod.rs  settings.rs
aetherment/src/view/explorer/: error.rs  generic.rs  modmanage.rs  modmeta.rs  tex.rs  tree.rs  uld.rs
aetherment/src/view/explorer/uld/: component.rs  enum_tools.rs  node.rs  timeline.rs
client/: Cargo.toml
client/src/: cli.rs  main.rs
imgui/: Cargo.toml  build.rs
imgui/src/: bindings.rs  (+1 more)
noumenon/: Cargo.toml
noumenon/src/: formats.rs  lib.rs
noumenon/src/formats/game/: mtrl.rs  tex.rs
plugin/: Aetherment.cs  Aetherment.csproj  Cargo.toml  Installer.cs  MaterialUI.csproj  build.rs
plugin/Format/: Tex.cs
plugin/GUI/: Config.cs  ImGui.cs  Settings.cs  TextureFinder.cs
plugin/GUI/Explorer/: Explorer.cs
plugin/GUI/Explorer/Viewer/: Raw.cs
plugin/Util/: Mod.cs  PenumbraApi.cs  TagGrabber.cs
plugin/plugin/: Aetherment.cs  Aetherment.csproj  Aetherment.json  Penumbra.cs  Texture.cs
plugin/plugin/FFI/: Str.cs
plugin/src/: handle.rs  imgui.rs  lib.rs  texture.rs  wndproc.rs
(+21 files in other folders)
