[package]
name = "aetherment"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22.0"
egui_dock = "0.6.3"

# anyhow = {version = "1.0.71", features = ["backtrace"]}
backtrace = "0.3.68"
reqwest = {version = "0.11.18", features = ["blocking"]}
flate2 = "1.0.26"
dirs = "5.0.1"
binrw = "0.11.2"
lazy_static = "1.4.0"

noumenon = {path = "../noumenon"}