[package]
name = "aetherment"
version = "0.1.0"
edition = "2021"

[features]
plugin = []

[dependencies]
zip = {version = "0.6.6", features = ["deflate"]}
flate2 = "1.0.26"
blake3 = "1.3.1"
base64 = "0.13.0"

reqwest = {version = "0.11.18", features = ["blocking"]}
image = "0.24.2"

dirs = "5.0.1"
binrw = "0.11.2"

egui = "0.22.0"
egui_dock = "0.6.3" # keep an eye on egui_tiles as a future alternative with more features
egui_file = "0.10.0"
egui_dnd = "0.5.0"

serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"

# anyhow = {version = "1.0.71", features = ["backtrace"]}
# backtrace = "0.3.68"
# lazy_static = "1.4.0"

noumenon = {path = "../noumenon"}
renderer = {path = "../renderer"}