[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
aetherment = {path = "../aetherment"}
noumenon = {path = "../noumenon"}
eframe = {version = "0.22.0", default-features = false, features = ["accesskit", "default_fonts", "wgpu"]}
clap = {version = "4.3.23", features = ["derive"]}