[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "aetherment_core"
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.66.1"

[dependencies.windows]
version = "0.43.0"
features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Controls",
]

[dependencies]
aetherment = {path = "../aetherment"}
raw-window-handle = "0.5.2"
egui = "0.22.0"
bitflags = "2.3.3"
# wgpu = "0.16.0"
# pollster = "0.2.4"